# MicroMixPy

./: .gitignore  CLAUDE.md  environment.yml  pyproject.toml  requirements.txt
.harness/: config.yaml
.harness/prompts/: adversarial.md  architect.md  design.md  discovery.md  evaluator.md  generator.md  planner.md
_bmad/: architecture.md  traceability.md  workflow.md
_bmad/agents/: adversarial-reviewer.md  architect-agent.md  design-agent.md  dev-agent.md  discovery-agent.md  pm-agent.md  scrum-master-agent.md
openspec/: AGENTS.md  project.md
openspec/capabilities/_capability-template/: design.md  spec.md
openspec/capabilities/diagnostics-plots/: spec.md
openspec/capabilities/fp07-coherence/: spec.md
openspec/capabilities/turbulence-dissipation/: spec.md
openspec/capabilities/turner-regimes/: spec.md
ops/: changelog.md  data-sources.md  e2e-test-plan.md  git-workflow.md  known-issues.md  metrics.md  status.md  test-results.md
scripts/: orchestrate.py  session-metrics.py
src/micromixpy/: __init__.py  config.py  pipeline.py
src/micromixpy/cli/: main.py
src/micromixpy/diagnostics/: __init__.py  plots.py
src/micromixpy/io/: __init__.py  mat_loader.py  metadata.py  netcdf_writer.py
src/micromixpy/oceanography/: __init__.py  binning.py  properties.py  thorpe.py  turner.py
src/micromixpy/processing/: __init__.py  calibration.py  downcasts.py  optics.py
src/micromixpy/turbulence/: __init__.py  (+6 more)
tests/: test_batchelor.py  test_config.py  test_fp07_coherence.py  test_oceanography.py  test_processing.py  test_turbulence.py  test_turner_regimes.py
