[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micromixpy"
version = "0.1.0"
description = "ODAS-like turbulent mixing processing pipeline for VMP-250 microstructure profiler data"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "gsw",
    "xarray",
    "netCDF4",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
micromixpy = "micromixpy.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
